# LORA-PEFT3

./: .gitignore  README.md  data_legal.csv  data_legal.csv.dvc  pyproject.toml  save_interrupted_plot.py
.dvc/: config
.dvc/tmp/: lock
configs/: train.yaml
legal_lora/: commands.py  export_onnx.py  infer.py  train.py
