[tool.poetry]
name = "legal-lora"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.7.1"
transformers = "^4.52.4"
peft = "^0.15.2"
datasets = "^3.6.0"
accelerate = "^1.7.0"
mlflow = "^3.1.0"
hydra-core = "^1.3.2"
fire = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
